# eterpix_win_NEXT_app

./: README_BUILD.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: build.js
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  image_processor.rs  lib.rs  log_parser.rs  main.rs  offline_queue.rs  osc_handler.rs  startup.rs  uploader.rs  watcher.rs
src/components/: HomePage.vue  LoginPage.vue  SettingsPage.vue
src/stores/: appStore.ts
