[package]
name = "eterpix-vrc-uploader"
version = "1.0.0"
description = "EterPix VRC Uploader"
authors = ["EterPix"]
edition = "2021"

[lib]
name = "eterpix_vrc_uploader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-single-instance = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 非同期HTTPクライアント
reqwest = { version = "0.12", features = ["multipart", "json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

# ファイル監視
notify = "6"

# 画像処理
image = { version = "0.25", features = ["png", "jpeg"] }

# OSC通信
rosc = "0.10"

# オフラインキュー (SQLite)
rusqlite = { version = "0.31", features = ["bundled"] }

# ユーティリティ
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
once_cell = "1"

# Windows専用 (スタートアップ登録)
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
